<resources>
    <string name="app_name">silang-mobdev</string>
    <string name="title_home">Home</string>
    <string name="title_history">History</string>
    <string name="title_notifications">Notifications</string>
    <string name="fab_translate">fab</string>
    <string name="email">Email</string>
    <string name="password">Password</string>
    <string name="login">Masuk</string>
    <string name="logout">Keluar</string>
    <string name="move_to_signup">Belum Punya Akun?</string>
    <string name="btn_to_signup">Daftar</string>
    <string name="move_to_login">Sudah Punya Akun?</string>
    <string name="btn_to_login">Masuk</string>
    <string name="name">Nama</string>
    <string name="signup">Daftar</string>
    <string name="more_options">More</string>
    <string name="lets_translate">Lets translate</string>
    <string name="bridge_use_together">Bridge use together</string>
    <string name="camera">Camera</string>
    <string name="sample_subtitle">Sample Subtitle</string>
    <string name="book">Book</string>
    <string name="gallery">Gallery</string>
    <string name="dummy_text">Lorem ipsum dolor sit amet&#8230;</string>
    <string name="history_title">History</string>
    <string name="see_all_title">See all</string>
    <string name="backpressed">backbutton</string>
    <string name="backbutton">back button</string>
    <string name="translate_title">Translate</string>
    <string name="video_title">Video 1 aaads21dvvsdf....</string>
    <string name="video_duration">00:57</string>
    <string name="video_size">8MB</string>
    <string name="translate_video">Translate video</string>
    <string name="todo">TODO</string>
    <string name="dummy_text_medium">Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod.</string>
    <string name="result_time_stamp">11:23</string>
    <string name="result_title">Result</string>
    <string name="profile">Profile</string>
    <string name="profile_email">youremail@gmail.com</string>
    <string name="profile_name">Your Name</string>
    <string name="profile_title">My Profile</string>
    <string name="hi_your_name">Hi, </string>
    <string name="confirmpassword">Confirm Password</string>
    <string name="username">Username</string>
    <string name="empty_video_warning">Empty Video Warning\n</string>
    <string name="upload_success">Translation Success</string>
    <string name="upload_failed">Translation Failed</string>
    <string name="your_name">my_name</string>
    <string name="translate">Translate</string>
    <string name="video_too_large">Max Size is 3 MB</string>
    <string name="camera_subtitle">Capture video with camera</string>
    <string name="gallery_subtitle">Select video from camera</string>
    <string name="strip">-</string>
    <string name="enter_feedback">Give us ur opinion</string>
    <string name="submit_feedback">Submit feedback</string>
    <string name="feedback_title">Feedback</string>
    <string name="copy">Copy</string>
</resources>